# BLOX2

./: .gitignore  LICENSE  README.md  example_usage.ipynb  pyproject.toml  test.ipynb
blox2/: __init__.py  base.py  blox2.py  blox2_selector.py  calc_sd_trajectory.py  metric.py  random_selector.py  stein_novelty_selector.py  utils.py
blox2/cli/: experiment_with_known_values.py
blox2/predictor/: __init__.py  lasso.py  lightgbm.py  random_forest.py  ridge.py  svr.py  tabpfn.py
config/: lightgbm.yaml  lightgbm_bo.yaml  lightgbm_with_uncertainty.yaml  random.yaml  random_forest.yaml  tabpfn.yaml  test.yaml
config/exps/: lgb_def_nes100_batch10_s1.yaml  lgb_def_nes100_batch20_s1.yaml  lgb_def_nes100_batch50_s1.yaml  lgb_def_nes100_batch5_s1.yaml  lgb_def_nes100_s0_2.yaml  lgb_def_nes100_s0_5.yaml  lgb_def_nes100_s0_8.yaml  lgb_def_nes100_s0_9.yaml  lgb_def_nes100_s10.yaml  lgb_def_nes100_s1_1.yaml  lgb_def_nes100_s1_2.yaml  lgb_def_nes100_s1_5.yaml  lgb_def_nes100_s1_6.yaml  lgb_def_nes100_s1_8.yaml  lgb_def_nes100_s2_5.yaml  lgb_def_nes100_s3.yaml  lgb_def_nes100_s5.yaml  lgb_def_nes100_sample100_s1.yaml  lgb_def_nes100_sample200_s1.yaml  lgb_def_nes100_sample500_s1.yaml  lgb_def_nes100_sample50_s1.yaml  rf_def_nes100_s1.yaml  rf_def_nes10_s1.yaml  rf_def_nes200_s1.yaml  (+3 more)
data/: README.md
sandbox/: calc_scores.ipynb  calc_scores_batch.ipynb  calc_scores_bulk.ipynb  check_cover.ipynb  check_pca.ipynb  compare_sd_trajectory.ipynb  compare_time_consumption.ipynb  evaluate_predictor.ipynb  experiment_with_known_values.ipynb  preprocessing.ipynb  test.ipynb
(+5 files in other folders)
