[tool.poetry]
name = "blox2"
version = "0.1.0"
description = "BLOX 2: "
authors = [
    "Satoru Fujii <fujii.sat.rk@yokohama-cu.ac.jp>"
]
packages = [
    { include = "blox2" }
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ycu-iil/blox2"

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "*"
pandas = "*"
matplotlib = "*"
scikit-learn = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
blox2 = "blox2.cli.experiment_with_known_values:main"